--- a/echo-control/docs/react-sdk/index.mdx
+++ b/echo-control/docs/react-sdk/index.mdx
@@ -20,7 +20,7 @@ function ChatComponent() {
   const handleGenerate = async () => {
     // Direct AI calls from the browser - no API keys needed!
     const { text } = await generateText({
-      model: openai('gpt-5'),
+      model: await openai('gpt-5'),
       prompt: 'Hello!'
     });
     
