--- a/echo-control/docs/index.mdx
+++ b/echo-control/docs/index.mdx
@@ -47,9 +47,9 @@ function ChatComponent() {
 ```
 
 **Three integration patterns:**
-- **React SDK** — OAuth2 + PKCE for secure client-side LLM calls
-- **Next.js SDK** — Server-side auth with automatic token management  
-- **TypeScript SDK** — API keys for backends and CLI tools
+- [**React SDK**](/docs/react-sdk) — OAuth2 + PKCE for secure client-side LLM calls
+- [**Next.js SDK**](/docs/next-sdk) — Server-side auth with automatic token management  
+- [**TypeScript SDK**](/docs/typescript-sdk) — API keys for backends and CLI tools
 
 The React and Next.js SDKs are opinionated wrappers around the TypeScript SDK, providing framework-specific patterns while the TypeScript SDK offers direct API access for maximum flexibility.
 
