--- a/echo-control/docs/getting-started/react.mdx
+++ b/echo-control/docs/getting-started/react.mdx
@@ -277,7 +277,7 @@ import { Step, Steps } from 'fumadocs-ui/components/steps';
 
             const handleGen = async () => {
                 const { text } = await generateText({
-                    model: await openai('gpt-5-nano'),
+                    model: openai('gpt-5-nano'),
                     messages: [
                         { role: 'user', content: 'Two sentences. What is the cleanest way to make $1M?' }
                     ]
@@ -320,7 +320,7 @@ import { Step, Steps } from 'fumadocs-ui/components/steps';
                 const { text } = await streamText({
                 // [!code --:1]
                 const { text } = await generateText({
-                    model: await openai('gpt-5-nano'),
+                    model: openai('gpt-5-nano'),
                     messages: [
                         { role: 'user', content: 'Two sentences. What is the cleanest way to make $1M?' }
                     ]
