--- a/echo-control/docs/index.mdx
+++ b/echo-control/docs/index.mdx
@@ -36,7 +36,7 @@ function ChatComponent() {
   
   const handleGenerate = async () => {
     const { text } = await generateText({
-      model: await openai('gpt-5'),
+      model: openai('gpt-5'),
       prompt: 'Hello world'
     });
     return text;
