--- a/echo-control/docs/react-sdk/index.mdx
+++ b/echo-control/docs/react-sdk/index.mdx
@@ -20,7 +20,7 @@ function ChatComponent() {
   const handleGenerate = async () => {
     // Direct AI calls from the browser - no API keys needed!
     const { text } = await generateText({
-      model: await openai('gpt-5-nano'),
+      model: openai('gpt-5-nano'),
       prompt: 'Hello!'
     });
     
@@ -99,7 +99,7 @@ function ChatApp() {
   
   const handleGenerate = async () => {
     const { text } = await generateText({
-      model: await openai('gpt-5-nano'),
+      model: openai('gpt-5-nano'),
       prompt: 'Why did the chicken cross the road?'
     });
     
