--- a/echo-control/docs/react-sdk/llm-integration.mdx
+++ b/echo-control/docs/react-sdk/llm-integration.mdx
@@ -24,7 +24,7 @@ function AIComponent() {
   
   const handleGenerate = async () => {
     const { text } = await generateText({
-      model: await openai('gpt-5'),
+      model: openai('gpt-5'),
       prompt: 'Write a haiku about coding'
     });
     
@@ -33,7 +33,7 @@ function AIComponent() {
 
   const handleStream = async () => {
     const { textStream } = await streamText({
-      model: await openai('gpt-5'),
+      model: openai('gpt-5'),
       prompt: 'Write a story about space exploration'
     });
     
