fixing EchoTokens and EchoUser schema

--- a/echo-control/docs/index.mdx
+++ b/echo-control/docs/index.mdx
@@ -44,6 +44,9 @@ function ChatComponent() {
   
   return <button onClick={handleGenerate}>Ask AI</button>;
 }
+
+export default App
+
 ```
 
 **Three integration patterns:**
