fix docs for callback urls

--- a/echo-control/docs/next-sdk/server.mdx
+++ b/echo-control/docs/next-sdk/server.mdx
@@ -44,6 +44,10 @@ Exporting these routes will expose default authentication routes which can be us
 - `api/echo/refresh`
 
 
+**Very important** - When productionizing your application, you will need to append `/api/echo/callback` to your app's homepage route when inputting the correct authorized
+callback Url.
+
+
 
 ## Server Utilities
 ```typescript
