fix readme badges

--- a/echo-control/docs/getting-started/next-js.mdx
+++ b/echo-control/docs/getting-started/next-js.mdx
@@ -137,7 +137,7 @@ import { File, Folder, Files } from 'fumadocs-ui/components/files';
         Add [Vercel AI SDK server routes](https://ai-sdk.dev/docs/ai-sdk-ui/completion) with Echo providers.
 
         ```typescript title="app/api/completion/route.ts" lineNumbers
-        // [!code highlight:1]
+        // [!code ++:1]
         import { openai } from "@/echo";
         import { convertToModelMessages, streamText } from "ai";
 
