--- a/echo-control/docs/typescript-sdk/authentication.mdx
+++ b/echo-control/docs/typescript-sdk/authentication.mdx
@@ -66,8 +66,26 @@ import type { TokenProvider } from '@merit-systems/echo-typescript-sdk';
 
 ### TokenProvider
 
-<AutoTypeTable 
-  path="../echo-typescript-sdk/src/index.ts" 
+<AutoTypeTable
+  type={`export interface TokenProvider {
+  /**
+   * Get the current access token
+   * @returns Promise that resolves to the access token or null if not available
+   */
+  getAccessToken(): Promise<string | null>;
+
+  /**
+   * Refresh the access token when it expires or becomes invalid
+   * @returns Promise that resolves when the token is refreshed
+   */
+  refreshToken(): Promise<string | void>;
+
+  /**
+   * Optional callback to be called when a token refresh fails
+   * @param error The error that occurred during refresh
+   */
+  onRefreshError?(error: Error): void;
+}`}
   name="TokenProvider" 
 />
 
