--- a/echo-control/docs/getting-started/templates.mdx
+++ b/echo-control/docs/getting-started/templates.mdx
@@ -25,22 +25,22 @@ a server to make API calls because it handles Oauth directly in the browser.
         <Tabs items={['npm', 'yarn', 'pnpm', 'bun']}>
             <Tab value="npm">
                 ```sh lineNumbers
-                npx create-echo-app@latest --template react --app-id YOUR_ECHO_APP_ID
+                npx echo-start@latest --template react --app-id YOUR_ECHO_APP_ID
                 ```
             </Tab>
             <Tab value="yarn">
                 ```sh lineNumbers
-                yarn create echo-app --template react --app-id YOUR_ECHO_APP_ID
+                yarn dlx echo-start@latest --template react --app-id YOUR_ECHO_APP_ID
                 ```
             </Tab>
             <Tab value="pnpm">
                 ```sh lineNumbers
-                pnpm create echo-app --template react --app-id YOUR_ECHO_APP_ID
+                pnpx echo-start@latest --template react --app-id YOUR_ECHO_APP_ID
                 ```
             </Tab>
             <Tab value="bun">
                 ```sh lineNumbers
-                bun create echo-app --template react --app-id YOUR_ECHO_APP_ID
+                bunx echo-start@latest --template react --app-id YOUR_ECHO_APP_ID
                 ```
             </Tab>
         </Tabs>
@@ -66,22 +66,22 @@ The Next.js template is a full-stack application that uses the Next.js framework
         <Tabs items={['npm', 'yarn', 'pnpm', 'bun']}>
             <Tab value="npm">
                 ```sh lineNumbers
-                npx create-echo-app@latest --template next --app-id YOUR_ECHO_APP_ID
+                npx echo-start@latest --template next --app-id YOUR_ECHO_APP_ID
                 ```
             </Tab>
             <Tab value="yarn">
                 ```sh lineNumbers
-                yarn create echo-app --template next --app-id YOUR_ECHO_APP_ID
+                yarn dlx echo-start@latest --template next --app-id YOUR_ECHO_APP_ID
                 ```
             </Tab>
             <Tab value="pnpm">
                 ```sh lineNumbers
-                pnpm create echo-app --template next --app-id YOUR_ECHO_APP_ID
+                pnpx echo-start@latest --template next --app-id YOUR_ECHO_APP_ID
                 ```
             </Tab>
             <Tab value="bun">
                 ```sh lineNumbers
-                bun create echo-app --template next --app-id YOUR_ECHO_APP_ID
+                bunx echo-start@latest --template next --app-id YOUR_ECHO_APP_ID
                 ```
             </Tab>
         </Tabs>
